[tool.poetry]
name = "Getting started with OpenCV Examples"
version = "0.1.0"
description = "Getting Started with OpenCV on Windows"
authors = ["Thomas Hochstrasser <thommyho1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.1.3"
markdown-include = "^0.6.0"
mkdocs-material-extensions = "^1.0.3"
mkdocs-video = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
